hphp/hack/test/typecheck/aktuple/dynamic_index_non_lvalue_ok.php.exp
File "dynamic_index_non_lvalue_ok.php", line 12, characters 12-16:
Invalid argument (Typing[4110])
  File "dynamic_index_non_lvalue_ok.php", line 16, characters 19-21:
  Expected `int`
  File "dynamic_index_non_lvalue_ok.php", line 9, characters 15-19:
  But got `string`
File "dynamic_index_non_lvalue_ok.php", line 13, characters 15-19:
Invalid argument (Typing[4110])
  File "dynamic_index_non_lvalue_ok.php", line 17, characters 22-27:
  Expected `string`
  File "dynamic_index_non_lvalue_ok.php", line 9, characters 12-12:
  But got `int`
